# vibe-requirements

./: .env.example  .gitignore  AGENTS.md  CONVENTIONS.md  README.md  architecture.md  docker-compose.yml  requirements.md
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_spec_inspections.py  0003_add_spec_req_id.py  0004_add_spec_revisions.py
backend/app/: __init__.py  bootstrap.py  config.py  db.py  main.py
backend/app/api/: blacklist.py  classification.py  cost.py  decisions.py  errors.py  (+15 more)
backend/tests/: conftest.py  gateway_cloud_helpers.py  prompt_preview_helpers.py  test_blacklist_api.py  test_blacklist_service.py  test_bootstrap.py  test_classification_api.py  test_classification_parser.py  test_classification_service.py  test_cost.py  test_cost_api.py  test_cost_service.py  test_decisions_api.py  test_embedding_service.py  test_export_api.py  test_export_inspection_markdown.py  test_export_markdown.py  test_export_slug.py  test_gateway_anthropic.py  test_gateway_api.py  test_gateway_deepseek.py  test_gateway_factory.py  test_gateway_ollama.py  test_gateway_openai.py  test_gateway_resilience.py  test_gateway_service.py  test_generation_cost_api.py  test_generation_layer_api.py  test_generation_layer_service.py  test_generation_parser.py  test_generation_service.py  test_generations_api.py  test_global_error_handler.py  test_inspections_api.py  test_inspector_parser.py  test_inspector_service.py  test_layer_service.py  test_layers_api.py  test_migration_0002.py  test_migration_0003.py  (+22 more)
(+252 files in other folders)
